HTML & CSS V-BETTA

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,12 @@
         <%- include('../partials/navigation') %>
 
         <main>
-            <%- body %>
+            <%- include('../partials/welcome') %>
+            <%- include('../partials/hero_image') %>
+            <section class="cards">
+                <%- include('../partials/upgrades') %>
+                <%- include('../partials/reviews') %>
+            </section>
         </main>
 
         <%- include('../partials/footer') %>
