--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,14 +23,20 @@
 
 body {
   font-family: var(--paragraph-font);
-  background-color: var(--background-color);
+  background: url('/images/site/checkerboard.jpg');
   color: var(--secondary-text-color);
+  /*display: flex;
+  justify-content: center;
+  align-items: center;*/
 }
 
 #wrapper {
   width: 100%;
-  margin: 0 auto;
+  max-width: 1200px;
+  margin: 20px auto;
   padding: 20px;
+  background-color: var(--background-color);
+  border-radius: 10px;
 }
 
 /*******************************/
@@ -92,6 +98,58 @@ body {
 main {
   margin-top: 20px;
   text-align: center;
+  display: grid;
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+/*****************************/
+/**    HERO IMAGE AREA       */
+/*****************************/
+.heroConteiner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 50px;
+}
+
+.callToActionArea {
+  border-radius: 10px;
+  border: 3px solid var(--secondary-text-color);
+  background-color: var(--secondary-color);
+  display: flex;  
+  flex-direction: column; 
+  justify-content: center;  
+  align-items: center;  
+  text-align: center;  
+  height: 100%;  
+  padding: 20px; 
+  line-height: 1.5;
+}
+
+.heroConteiner img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+/*****************************/
+/**        CARDS             */
+/*****************************/
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+/* Delorean Upgrades */
+.upgradesCards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+/* Delorean Reviews */
+.reviewsConteiner {
+  line-height: 2;
 }
 
 /* Footer */
@@ -102,4 +160,11 @@ footer {
   padding: 10px;
   margin-top: 20px;
   font-family: var(--heading-font);
+}
+
+@media (max-width: 650px) {
+  body {
+  background: none;
+  background-color: var(--card-background-color);
+  }
 }
