--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Cards Site" >
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-    <meta property="og:url" content="https://jordansanchez23.github.io/cse340/views/index.ejs">
+    <meta property="og:url" content="https://github.com/jordansanchez23/cse340">
     <meta property="og:description" content="Discover information about which car to buy with the best prices on Internet.">
 
 
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="Cards Site">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-    <meta name="twitter:url" content="https://jordansanchez23.github.io/cse340/views/index.ejs">
+    <meta name="twitter:url" content="https://github.com/jordansanchez23/cse340">
     <meta name="twitter:description" content="Discover information about which car to buy with the best prices on Internet.">
 
 
@@ -25,5 +25,5 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Playfair+Display&display=swap" rel="stylesheet">
-    <!--<link rel="icon" href="images/favicon.ico">-->
+    <link rel="icon" href="/images/site/favicon-32x32.ico">
 </head>
