HTML Errors fixed

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -10,10 +10,10 @@
         <main>
             <%- include('../partials/welcome') %>
             <%- include('../partials/hero_image') %>
-            <section class="cards">
+            <div class="cards">
                 <%- include('../partials/upgrades') %>
                 <%- include('../partials/reviews') %>
-            </section>
+            </div>
         </main>
 
         <%- include('../partials/footer') %>
