grid displayed for cars

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,6 +8,7 @@
         <%- include('../partials/navigation') %>
 
         <main>
+            <%- body %>
             <%- include('../partials/welcome') %>
             <%- include('../partials/hero_image') %>
             <div class="cards">
